# freezedry

./: README.md  freezedry.py  pyproject.toml
