[tool.poetry]
name = "freezedry"
version = "0.1.9"
description = "Super simple Flask frozen site generator."
authors = ["Brantley Harris <deadwisdom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Frozen-Flask = "^0.18"
Flask-FlatPages = "^0.7.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
freeze = 'freezedry:freeze'
serve = 'freezedry:serve'
